--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
     </head>
     <body>
-        <h1>This is a header</h1>        
+        <h1>This is a header</h1>       
+        <p>This is a paragraph, just to be commited, not other purpose</p> 
     </body>
 </html>
